# bioc-builder

./: .gitignore  README_alembic.md  pyproject.toml
bioc_builder/: app.py  aws_batch_utils.py  aws_s3_utils.py  models.py
client/: README.md  package-lock.json  package.json
client/public/: index.html
client/src/: App.vue  main.js  router.js
client/src/components/: Job.vue  Jobs.vue  NewJob.vue
templates/: base.html  job.html  jobs.html  starter_index.html
tests/: test_bioc_builder.py
